app/assets/stylesheets/tops.scss
html {
  position: relative;
  min-height: 100%;
}
header {
  background-color: #000000;
  height: 100px;
  padding: 15px;
  margin: 0;
  position: fixed;
  width: 100%;
  top: 0;
}
.header_logo a {
  font-size: 20px;
  color: #ff00ff;
  margin: 1%;
}
// header ul {
//   margin: 0 auto;
//   list-style: none;
// }
// header ul a {
//   display: block;
//   padding: 15px;
//   text-decoration: none;
//   color: #ff00ff;
// }
// header li {
//   float: left;
//   width: auto;
// }
// header ul:after {
//   content: "";
//   display: block;
//   clear: both;
// }
.menu {
  // position: fixed;
  height: 60px;
  padding: 0;
  // display: flex;
  // justify-content: flex-end;
  // align-items: center;
}
.menu a {
  color: #fff;
  padding: 0;
  margin: 1%;
  float: right;
}
.alert {
  color: #fff;
  float: left;
}
body {
  width: 100%;
  margin: 0;
  padding: 100px 0 50px 0;
  position: relative;
  // background-image: url("background.png");
  min-height: 100vh;
}
// li {
//   list-style: none;
// }
// ul {
//   padding: 0;
// }
.title {
  font-size: 30px;
  font-weight: bold;
  text-align: left;
  color: #ff00ff;
}
// .contents li {
//   background-color: #f3a7ab;
//   color: #fff;
//   padding: 10% 5%;
//   box-sizing: border-box;
//   border: solid 1px #fff;
// }
// .topic li {
//   margin: 1%;
//   border-bottom: dotted 1px #333333;
// }
// .container {
//   margin-top: 20px;
//   padding-bottom: 100px;
// }

footer {
  width: 100%;
  height: 50px;
  background-color: #000;
  color: #ff00ff;
  text-align: center;
  padding: 0;
  position: absolute;
  bottom: 0;
  margin: 0;
}

